// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="FieldGroup"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component children in a row 1`] = `
<div
  class="FieldGroup my-extra-class FieldGroup--row"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="FieldGroup my-extra-class"
  data-test-id="cf-ui-field-group"
>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="agree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="agree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="agree"
        >
          Do you agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you agree
        </p>
      </div>
    </div>
  </div>
  <div
    class="FieldGroup__item"
  >
    <div
      class="ControlledInputField"
      data-test-id="cf-ui-checkbox-field"
    >
      <div
        class="Checkbox ControlledInputField__input"
      >
        <input
          aria-label="Do you really agree?"
          class="ControlledInput"
          data-test-id="cf-ui-controlled-input"
          id="reallyAgree"
          type="checkbox"
          value=""
        />
        <label
          class="Input__ghost Checkbox__ghost"
          for="reallyAgree"
        >
          <svg
            class="Icon Icon--medium Icon--white"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
            />
          </svg>
        </label>
      </div>
      <div
        class="Checkbox__label-wrapper"
      >
        <label
          class="FormLabel ControlledInputField__label"
          data-test-id="cf-ui-form-label"
          for="reallyAgree"
        >
          Do you really agree?
        </label>
        <p
          class="HelpText ControlledInputField__help-text"
          data-test-id="cf-ui-help-text"
        >
          Click if you really agree
        </p>
      </div>
    </div>
  </div>
</div>
`;
